<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_button"
        style="@style/regular_17sp_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/back"
        android:textColor="@color/main_pink"
        app:icon="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/bold_15sp_black"
        android:textColor="@color/black"
        android:text="@string/new_track"
        app:layout_constraintBottom_toTopOf="@+id/frame_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@drawable/ic_dialog_frame"
        app:layout_constraintTop_toBottomOf="@id/back_button" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/track_name_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/track_name"
        style="@style/input_layout"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_layout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/track_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/regular_16sp_black"
            tools:text="Для новичков"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/track_description_layout"
        style="@style/input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/track_description"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/track_name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/track_description_edit"
            style="@style/regular_16sp_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Приучить себя к регулярным занятиям бегом – задача непростая" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="21dp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintTop_toBottomOf="@+id/track_description_layout" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/regular_17sp_white"
        android:text="@string/save"
        app:cornerRadius="8dp"
        android:paddingVertical="14dp"
        android:layout_margin="16dp"
        android:visibility="gone"
        tools:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/background_tint"
        app:layout_constraintBottom_toBottomOf="parent">

        <FrameLayout
            android:id="@+id/bottom_frame"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@drawable/ic_dialog_frame"
            app:layout_constraintTop_toBottomOf="@id/back_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete_button"
            style="@style/regular_17sp_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@android:color/transparent"
            android:text="@string/delete"
            android:textColor="@color/gray" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/change_button"
            style="@style/regular_17sp_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:text="@string/change"
            android:textColor="@color/main_pink" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>