<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="35dp"
        android:layout_height="5dp"
        android:background="@drawable/ic_dialog_frame"
        android:layout_marginTop="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_text"
        style="@style/black_17sp_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dict"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/frame"
        app:layout_constraintStart_toStartOf="@+id/frame"
        app:layout_constraintTop_toBottomOf="@+id/frame" />

    <TextView
        android:id="@+id/time_text"
        style="@style/regular_17sp_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="00:00"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/frame"
        app:layout_constraintStart_toStartOf="@+id/frame"
        app:layout_constraintTop_toBottomOf="@+id/title_text" />


<!--  Вставить фрэйм диктофона  -->
    <fragment
        android:id="@+id/time_frame"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@+id/time_text"
        tools:ignore="FragmentTagUsage" />

    <ImageButton
        android:id="@+id/close_button"
        android:layout_width="36dp"
        android:layout_height="47dp"
        android:paddingEnd="6dp"
        android:paddingTop="17dp"
        android:src="@drawable/ic_close"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/regular_18sp_black"
        android:text="@string/cancel"
        android:paddingVertical="8dp"
        android:layout_marginStart="26dp"
        app:layout_constraintBottom_toBottomOf="@+id/record_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/record_button" />

    <ImageButton
        android:id="@+id/record_button"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_marginVertical="16dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_start_record"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_frame" />

    <TextView
        android:id="@+id/ready_button"
        style="@style/black_18sp_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:text="@string/ready"
        android:layout_marginEnd="26dp"
        app:layout_constraintBottom_toBottomOf="@+id/record_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/record_button" />

</androidx.constraintlayout.widget.ConstraintLayout>